# egui-geode

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  about.md  build.bat  build.rs  build.sh  mod.json
cpp-src/: api.cpp  ffi.cpp  gl_util.cpp  hooks.cpp  main.cpp
example/: CMakeLists.txt  README.md  build.sh  mod.json
example/rust-ffi/: Cargo.toml
example/rust-ffi/src/: lib.rs
example/rusty/: Cargo.toml
example/rusty/src/: lib.rs
example/src/: main.cpp
include/: api.hpp  ffi.h  ffi.hpp  gl-util.hpp  gl_util.hpp
rust-ffi/: Cargo.toml  build.rs
rust-ffi/src/: lib.rs
rust-ffi/src/gd/: mod.rs
rust-src/: errors.rs  gd.rs  gui.rs  lib.rs
rust-src/gui/: mod.rs
rust/ffi/: Cargo.toml  build.rs
rust/ffi/src/: gl.rs  lib.rs  log.rs
rust/lib/: lib.rs
rusty-src/: cpp_ffi_wrapper.rs  error_messages.rs  ffi.rs  lib.rs
rusty-src/geode/: gl.rs  log.rs  mod.rs
rusty-src/gui/: mod.rs
src/: api.cpp  ffi.cpp  ffi.h  gl-util.cpp  gl_util.cpp  gl_util.hpp  lib.rs  main.cpp
